Edit readme for download information